<resources>
    <string name="app_name">GoVip</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ddd">DDD</string>
    <string name="phone">Phone</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="already_have_account">Already have an account ?</string>
    <string name="dont_have_account">Do not have an account ?</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>

</resources>
