<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.joker.govip.ui.login.signin.SignInActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorDark"
        app:paddingStart="0dp"
        app:contentInsetStart="0dp"
        android:id="@+id/toolbar_activity_sign_in"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/goviphdlogo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email_activity_sign_in"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_email_activity_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password_activity_sign_in"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_text_password_activity_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryText"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:imeOptions="actionDone"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_sign_in_activity_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_in"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/colorPrimaryText"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:id="@+id/text_view_sign_up_activity_sign_in"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:id="@+id/text_view_forgot_password_activity_sign_in"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center" />

    </LinearLayout>

</FrameLayout>
